# deli-autoresearch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  PLANS.md  README.md  SORRY_LEDGER.md  pyproject.toml
.claude/: settings.json
.claude/agents/: formal-architect.md  lean-prover.md  red-team.md  requirements-analyst.md  runtime-engineer.md  spec-coordinator.md  verifier.md
.claude/hooks/: block-dangerous-command.py  (+6 more)
artifacts/: research_manifest.json
benchmarks/: sum_of_odds_tail_pass.json
config/: source_registry.example.yml
docs/: README.md  claude-code-operations.md  publishing.md  release-notes-v0.1.0.md  source_bounded_research.md
examples/: sum_of_odds_task_spec.md
schemas/: source_registry.schema.json  spec-run-result.schema.json
scripts/: _lock_worker.py  check-dependency-dag.py  migrate_legacy_findings.py  run_g9_exploration.py  run_orchestrator_bridge_once.py  sorry-gate.py  theorem-hash-gate.py  theorem-strength-gate.py  validate-evidence.py  validate-sorry-ledger.py  validate-spec-completeness.py  worktree-cleanup.py  worktree-create.py
spc_analysis/: analyze_rules.py  build_spc_corpus.py  expert_evaluation_report.md  extract_rules.py  filter_horn.py  validate_juris.py
state/: cross_repo_lock.json
tests/: test_batch_litigation.py  test_certificate_refinance.py  test_cross_repo.py  test_disclosure_gate.py  test_framework.py  test_lean_manifest_paths.py  test_legal_proof.py  test_local_history_profile.py  test_memory_router.py  test_p0_1_multiprocess.py  test_p0_acceptance.py  test_priority_queue.py  test_retrieval_policy.py  test_scoring.py  test_search_frontier.py  test_source_registry.py  test_trial_harness.py  test_verification_backends.py
(+274 files in other folders)
