[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delichen-proofweaver"
version = "0.1.0"
description = "Long-horizon proof research orchestration framework by DeliChen."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
delichen-proofweaver = "deli_autoresearch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
