[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deli-autoresearch"
version = "0.1.1"
description = "Long-horizon proof research orchestration framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
deli-autoresearch = "deli_autoresearch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
